tambah paragrap dummy

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 	</head>
 	<body>
 		<h1>Selamat datang di website kami</h1>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor color molor jolor solor</p>
 	</body>
 </html>
