--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>Selamat datang di website kami</h1>
-		<p>Lorem ipsum dolor</p>
-		<p>Lorem ipsum dolor color molor jolor solor</p>
+		<p>Quam molestias culpa molestiae animi maiores voluptates. In, molestias perferendis impedit qui magni, earum necessitatibus ipsum sapiente animi neque eius ab quos maxime voluptatem minima, fuga suscipit?</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit recusandae, voluptatibus possimus minima nisi laborum. Quam molestias culpa molestiae animi maiores voluptates. In, molestias perferendis impedit qui magni, earum necessitatibus ipsum sapiente animi neque eius ab quos maxime voluptatem minima, fuga suscipit? Vel officiis earum quis omnis voluptatum iste accusamus.</p>
 	</body>
 </html>
